# technology-kg-qa

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  gunicorn_conf.py  pyproject.toml  run.py  verify.sh  verify_app.py
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  health.py  knowledge.py  qa.py  router.py
backend/app/data/: importer.py  parser.py
backend/app/database/: milvus_client.py  mysql.py  neo4j_client.py
backend/app/eval/: dataset.py  metrics.py
backend/app/models/: user.py
backend/app/qa/: __init__.py  answer_generator.py  entity_linker.py  pipeline.py  subgraph_retriever.py
backend/app/rag/: bm25_retriever.py  doc_generator.py  embeddings.py  fusion.py  hybrid_retriever.py  hyde.py  query_rewriter.py  rrf.py
backend/app/schemas/: user.py
backend/app/services/: auth.py
backend/scripts/: build_index.py  create_relationships.py  eval_results.json  evaluate.py  evaluate_ragas.py  import_all_domains.py  import_ownthink.py  load_test.py
backend/tests/: conftest.py  test_answer_generator.py  test_api.py  test_auth_api.py  test_auth_service.py  test_bm25.py  test_doc_generator.py  test_embeddings.py  test_entity_linker.py  test_eval_metrics.py  test_fusion.py  test_hybrid_retriever.py  test_hyde.py  test_importer.py  test_milvus_client.py  test_mysql.py  test_neo4j_client.py  test_parser.py  test_pipeline.py  test_query_rewriter.py  test_rrf.py  test_subgraph_retriever.py  test_user_model.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/api/: auth.ts  index.ts  qa.ts
frontend/src/components/: Header.vue  HelloWorld.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
(+5 files in other folders)
